--- a/css-p/main.css
+++ b/css-p/main.css
@@ -67,7 +67,7 @@ body {
 	width: 100%;
 	text-align: center;
 	font-size: 2em;
-	font-family: 'Lato';
+	font-family: 'Josefin Slab';
 	margin-bottom: -0.5em;
 }
 
