--- a/css-p/main.css
+++ b/css-p/main.css
@@ -27,7 +27,9 @@ body {
 
 .slider-text {
 	margin-left: 3em;
-	padding-top: 1.1em;
+	margin-top: 0.9em;
+	font-family: 'Josefin Slab';
+	font-size: 1.3em;
 }
 
 .range-slider-handle {
