--- a/css-p/main.css
+++ b/css-p/main.css
@@ -64,7 +64,7 @@ body {
 }
 
 #title {
-	font-family: 'Permanent Marker', cursive;
+	font-family: 'Finger Paint', cursive;
 	font-size: 5em;
 }
 
@@ -104,7 +104,7 @@ body {
 }
 
 .range-slider-handle {
-	font-family: 'Permanent Marker', cursive;
+	font-family: 'Josefin Slab', cursive;
 }
 
 #comp-cont {
