--- a/css-p/main.css
+++ b/css-p/main.css
@@ -1,3 +1,9 @@
+body {
+	font-size: 16px;
+	font-family: 'Josefin Slab', serif;
+}
+
+/* Ensures vertical AND horizontal position for the sliders */
 .slider-row {
   display: -webkit-box;
   display: -moz-box;
@@ -17,32 +23,8 @@
 	padding-top: 1.5em;
 }
 
-#value-disp {
-    width: 100%;
-    text-align: center;
-    margin-top: 1.5em;
-	font-family: 'Josefin Slab', serif;
-}
-
-.val-cont {
-    color: RGB(0,0,0);
-    display: inline-block;
-    font-size: 1.5em;
-    margin: 1em;
-    width: auto;
-    height: auto;
-    border-radius: 15px;
-    background-color: rgb(255, 255, 255);
-    padding-top: 0.2em;
-    padding: 0.5em;
-}
-
 #slider-container {
-	padding-top: 2em;
-}
-
-body {
-	font-size: 16px;
+	padding-top: 4em;
 }
 
 .range-slider-handle {
@@ -68,14 +50,6 @@ body {
 	font-family: 'Josefin Slab', serif;
 }
 
-.dev-notice {
-	width: 100%;
-	text-align: center;
-	font-size: 2em;
-	margin-bottom: -0.5em;
-	font-family: 'Josefin Slab', serif;
-}
-
 #footer{
 	display: block;
 	text-align: center;
@@ -98,15 +72,39 @@ body {
 	color: rgb(150, 150, 150);
 }
 
-#comp-cont {
-    margin-left: 47%;
-    margin-right: 47%;
-    margin-top: 2em;
-    text-align: center;
-}
-
 .a-cont {
     width: 2em;
     height: 2em;
     background-color: rgb(0, 0, 0);
+}
+
+#value-disp {
+    width: 100%;
+    text-align: center;
+    margin-top: 1.5em;
+	font-family: 'Josefin Slab', serif;
+}
+
+.val-cont {
+    display: inline-block;
+    font-size: 1.5em;
+    margin: 1em;
+    width: auto;
+    height: auto;
+    border-radius: 15px;
+    background-color: rgb(255, 255, 255);
+    padding-top: 0.2em;
+    padding: 0.5em;
+}
+
+.comp-val-cont {
+    display: inline-block;
+    font-size: 1.5em;
+    margin: 1em;
+    width: auto;
+    height: auto;
+    border-radius: 15px;
+    background-color: rgb(255, 255, 255);
+    padding-top: 0.2em;
+    padding: 0.5em;
 }
