--- a/css-p/main.css
+++ b/css-p/main.css
@@ -43,6 +43,7 @@ body {
 	font-family: 'Finger Paint', cursive;
 	font-size: 5em;
 	color: rgb(0,0,0);
+	margin-left: -1em;
 }
 
 #subtitle {
@@ -56,10 +57,10 @@ body {
 	font-size: 0.9em;
 	bottom:0;
 	width: 100%;
-	height: 30px;
+	height: 4em;
 	color: rgb(154, 154, 154);
 	position: fixed;
-	margin-bottom: -10px;
+	margin-bottom: -30px;
 	font-family: 'Josefin Slab', serif;
 }
 
@@ -70,6 +71,11 @@ body {
 
 #footer a:hover {
 	color: rgb(150, 150, 150);
+}
+
+#footer #text {
+	margin-right: -1em;
+	margin-bottom: -20px;
 }
 
 .a-cont {
@@ -107,4 +113,29 @@ body {
     background-color: rgb(255, 255, 255);
     padding-top: 0.2em;
     padding: 0.5em;
+}
+
+#info {
+	float: right;
+	margin-left: 20px;
+	font-size: 1.5em;
+	font-family: 'Josefin Slab', serif;
+	color: rgb(255, 255, 255);
+	height: auto;
+	width: 1em;
+	border-radius: 50%;
+	background-color: rgb(0,0,0);
+	margin-bottom: 20px;
+	margin-right: 10px;
+}
+
+#intro-text a {
+	text-decoration: none;
+	color: inherit;
+}
+
+#info:hover {
+	background-color: rgb(255,255,255);
+	color: rgb(0,0,0);
+	box-shadow: 0px 4px 4px rgb(0,0,0);
 }
