--- a/css-p/main.css
+++ b/css-p/main.css
@@ -54,12 +54,11 @@ body {
 	display: block;
 	text-align: center;
 	font-size: 0.9em;
-	bottom:0;
+	bottom: 5px;
 	width: 100%;
-	height: 4em;
+	height: 30px;
 	color: rgb(154, 154, 154);
 	position: fixed;
-	margin-bottom: -30px;
 	font-family: 'Josefin Slab', serif;
 }
 
@@ -72,8 +71,8 @@ body {
 	color: rgb(150, 150, 150);
 }
 
-#footer #text {
-	margin-bottom: -20px;
+#text {
+	padding-top: 15px;
 }
 
 .a-cont {
@@ -113,26 +112,7 @@ body {
     padding: 0.5em;
 }
 
-#info {
-	float: right;
-	font-size: 1.5em;
-	font-family: 'Josefin Slab', serif;
-	color: rgb(255, 255, 255);
-	width: 1em;
-	border-radius: 50%;
-	background-color: rgb(0,0,0);
-	margin-bottom: 20px;
-	margin-right: 10px;
-	box-shadow: 0px 4px 4px rgb(0,0,0);
-}
-
 #intro-text a {
 	text-decoration: none;
 	color: inherit;
-}
-
-#info:hover {
-	background-color: rgb(255,255,255);
-	color: rgb(0,0,0);
-	box-shadow: 0px 4px 4px rgb(0,0,0);
 }
